<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018-2020 The Xiaomi-SDM660 Project

     https://github.com/xiaomi-sdm660
     
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_off">Off</string>

    <!-- Device specific settings -->
    <string name="device_settings_app_name">Advanced Doze Settings</string>

    <!-- Ambient Display -->
    <string name="ambient_display_title">Ambient Display</string>

    <!-- Tilt sensor -->
    <string name="tilt_sensor_title">Tilt Sensor Gestures</string>

    <!-- Proximity sensor -->
    <string name="proximity_sensor_title">Proximity Sensor Gestures</string>

    <!-- Hand wave gesture -->
    <string name="hand_wave_gesture_title">Hand Wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>

    <!-- Pick-up gesture -->
    <string name="pick_up_gesture_title">Pick-Up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>

    <!-- Pocket gesture -->
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- Proximity wake -->
    <string name="proximity_wake_title">Proximity Wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>

    <!-- Dialog texts -->
    <string name="dialog_ok">OK</string>

    <!-- Help texts -->
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    
    <!-- Doze Tile Service -->
    <string name="ambient_display_gestures_title">Ambient Display Gesture</string>
    
    <!-- Raise to Wake Gesture -->
    <string name="raise_to_wake_gesture_title">Raise To Wake</string>
    <string name="raise_to_wake_gesture_summary">Tilt Sensor events to raise your device.</string>
</resources>
